Fix htmlacademy svg logo overflow in ie11

--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ img {
 .main-footer-developer-link svg {
   width: 115px;
   height: 41px;
+  overflow: hidden;
 
   vertical-align: middle;
 }
